--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <div id="card">
   <div class="side one"></div>
   <div class="side two">
-    <h2>Mabel Olivera</h2>
-    <p>Queridos programadores de todo el mundo</p>
-    <p>En este día de San Valentín, quiero enviarles un mensaje especial para expresar mi profunda admiración por su increíble trabajo y dedicación. Cada línea de código que escriben es como una declaración de amor al mundo digital, cada algoritmo que diseñan es un poema de ingenio y creatividad.</p>
-    <p>¡Feliz día de San Valentín, queridos programadores! Que sus corazones estén llenos de amor y sus líneas de código estén libres de bugs.</p>
+    <h2>Mary Carmen Salinas Maldonado</h2>
+    <p>Para mi dechito hermosa</p>
+    <p>En este día de San Valentín, quiero agradecerte por estar a mi lado, pasamos por varias cosas y aun así siempre estuviste a mi lado, te amo un monton mi niña hermosa, somos un equipo, en las buenas y en las malas, con mucho amor. </p>
+    <p>ATT: tu dechulandio.</p>
   </div>
 </div>
 
